--- a/index.html
+++ b/index.html
@@ -4,15 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>你是个250 终极无敌250</title>
+    <title>恭喜发财 红包拿来</title>
 </head>
 <style>
-    .wenzi{
+    @font-face{
+        font-family: ziti;
+        src: url(chuchen.ttf);
+    }
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    .beijing{
+        width: 100%;
+        height: auto;
+        background: url(背景.png);
+        background-size: 100% auto;
+    }
+    .gongxifacai{
+        text-align: center;
+        color: #ef7a82;
+        padding-top: 100px;
+        font-size:40px;
+        font-family: ziti;
+    }
+    .guonian{
+        text-align: center;
         color: black;
-        font-size:250px;
+        padding-top: 20px;
+        font-size: 20px;
+        font-family: ziti;
+    }
+    .zhufu{
+        text-align: center;
+        color: black;
+        padding-top: 10px;
+        font-size: 20px;
+        font-family: ziti;
+    }
+    .weixin{
+        width: 186.25px;
+        height: 253.5px;
+        padding-top: 10px;
+        padding-left: 40px;
+    }
+    .zhifubao{
+        width: 186.25px;
+        height: 253.5px;
+        padding-top: 10px;
+        padding-left: 40px;
+    }
+    .QQ{
+        width: 186.25px;
+        height: 253.5px;
+        padding-top: 10px;
+        padding-left: 40px;
     }
 </style>
 <body>
-    <div class="wenzi">你是250</div>
+    <div class="beijing">
+        <div class="gongxifacai">恭喜发财 红包拿来</div>
+        <div class="guonian">叔叔 阿姨 姑姑 姑父 舅舅 哥哥姐姐 兄弟姐妹都过年了给个200不过分吧😘</div>
+        <div class="zhufu">只要给了红包就祝您 福如东海，寿比南山，岁岁平安，安居乐业，业和邦兴，兴旺发达，大吉大利，力争上游，游刃有余，青春永驻💕</div>
+        <img class="weixin" src="微信.png"></img>
+        <img class="zhifubao" src="支付宝.png"></img>
+        <img class="QQ" src="QQ.png"></img>
+    </div>
+    <audio src="好运来.mp3" autoplay loop></audio>
 </body>
 </html>
